@startuml modelo
' Configuração para mostrar os ícones de visibilidade (opcional, deixa o diagrama mais limpo)
skinparam classAttributeIconSize 0
skinparam monochrome true

class Aluno {
  - matricula: String
  - emailInstitucional: String
  - senha: String
  - saldoCefetins: Float
}

class Item {
  - idItem: Integer
  - nomeCurto: String
  - descricaoDetalhada: String
  - fotoUrl: String
  - precoVenda: Float
  - percentualDesconto: Integer
  - periodoLancamento: String
  - quantidadeEstoque: Integer
  - quantidadeVendida: Integer
}

class Carrinho {
  - idCarrinho: Integer
  - total: Float
}

class ItemCarrinho {
  - quantidadeAdicionada: Integer
  - subtotal: Float
}

class Compra {
  - numeroCompra: String
  - dataHora: Date
  - totalCobrado: Float
}

class ItemCompra {
  - quantidadeComprada: Integer
  - precoCongelado: Float
}

' Relacionamentos (Associações, Agregações e Composições)
Aluno "1" -- "0..1" Carrinho : possui >
Carrinho "1" *-- "0..*" ItemCarrinho : contem >
ItemCarrinho "0..*" --> "1" Item : refere-se a >

Aluno "1" -- "0..*" Compra : realiza >
Compra "1" *-- "1..*" ItemCompra : registra >
ItemCompra "0..*" --> "1" Item : refere-se a >

@enduml